Fix download buttons spacing

--- a/vixo_add_to_quotation/static/src/scss/vixo_override.scss
+++ b/vixo_add_to_quotation/static/src/scss/vixo_override.scss
@@ -83,4 +83,5 @@ ol.carousel-indicators li img {
 
 .product-detail-downloads a.dl-item {
 	text-decoration: underline;
+	line-height: 35px;
 }
